--- a/android/build.gradle
+++ b/android/build.gradle
@@ -23,6 +23,7 @@ buildscript {
 
 allprojects {
     repositories {
+        google()
         maven { url 'https://maven.fabric.io/public' }
         mavenLocal()
         jcenter()
