--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react": "16.5.0",
     "react-native": "0.57.1",
     "react-native-calendars": "^1.32.0",
+    "react-native-iphone-x-helper": "^1.2.0",
     "react-native-swiper": "^1.5.13",
     "react-native-vector-icons": "^6.4.2",
     "react-timer-mixin": "^0.13.4"
