--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "react-native-modal": "^10.0.0",
     "react-native-swiper": "^1.5.14",
     "react-native-vector-icons": "^6.4.2",
-    "react-timer-mixin": "^0.13.4"
+    "react-timer-mixin": "^0.13.4",
+    "realm": "^2.28.0"
   },
   "devDependencies": {
     "babel-jest": "23.6.0",
