--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -1,5 +1,5 @@
 apply plugin: "com.android.application"
-apply plugin: 'io.fabric'
+
 import com.android.build.OutputFile
 
 /**
@@ -101,22 +101,12 @@ android {
         applicationId "com.organizeme"
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
-        versionCode 5
-        versionName "1.4"
+        versionCode 1
+        versionName "1.0"
         ndk {
             abiFilters "armeabi-v7a", "x86"
         }
     }
-    signingConfigs {
-       release {
-           if (project.hasProperty('MYAPP_RELEASE_STORE_FILE')) {
-               storeFile file(MYAPP_RELEASE_STORE_FILE)
-               storePassword MYAPP_RELEASE_STORE_PASSWORD
-               keyAlias MYAPP_RELEASE_KEY_ALIAS
-               keyPassword MYAPP_RELEASE_KEY_PASSWORD
-           }
-       }
-   }
     splits {
         abi {
             reset()
@@ -129,7 +119,6 @@ android {
         release {
             minifyEnabled enableProguardInReleaseBuilds
             proguardFiles getDefaultProguardFile("proguard-android.txt"), "proguard-rules.pro"
-            signingConfig signingConfigs.release
         }
     }
     // applicationVariants are e.g. debug, release
@@ -148,14 +137,11 @@ android {
 }
 
 dependencies {
-    compile project(':realm')
-    compile project(':react-native-vector-icons')
+    implementation project(':realm')
+    implementation project(':react-native-vector-icons')
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation "com.android.support:appcompat-v7:${rootProject.ext.supportLibVersion}"
     implementation "com.facebook.react:react-native:+"  // From node_modules
-    implementation('com.crashlytics.sdk.android:crashlytics:2.9.5@aar') {
-        transitive = true;
-    }
 }
 
 // Run this once to be able to run the application with BUCK
