--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,3 @@
-# See https://help.github.com/ignore-files/ for more about ignoring files.
-.expo/settings.json
-.watchmanconfig
 # OSX
 #
 .DS_Store
@@ -39,7 +36,6 @@ node_modules/
 npm-debug.log
 yarn-error.log
 
-
 # BUCK
 buck-out/
 \.buckd/
@@ -50,10 +46,11 @@ buck-out/
 # It is recommended to not store the screenshots in the git repo. Instead, use fastlane to re-generate the
 # screenshots whenever they are needed.
 # For more information about the recommended setup visit:
-# https://github.com/fastlane/fastlane/blob/master/fastlane/docs/Gitignore.md
+# https://docs.fastlane.tools/best-practices/source-control/
 
-fastlane/report.xml
-fastlane/Preview.html
-fastlane/screenshots
-android/app/fabric.properties
-package-lock.json
+*/fastlane/report.xml
+*/fastlane/Preview.html
+*/fastlane/screenshots
+
+# Bundle artifact
+*.jsbundle
