--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "create-react-class": "^15.6.3",
     "moment": "^2.24.0",
     "react": "16.8.6",
-    "react-native": "0.59.9",
+    "react-native": "^0.59.9",
     "react-native-calendars": "^1.32.0",
     "react-native-iphone-x-helper": "^1.2.0",
     "react-native-modal": "^10.0.0",
@@ -23,7 +23,7 @@
   "devDependencies": {
     "babel-jest": "23.6.0",
     "jest": "23.6.0",
-    "metro-react-native-babel-preset": "0.47.0",
+    "metro-react-native-babel-preset": "0.51.0",
     "react-test-renderer": "16.5.0"
   },
   "jest": {
