--- a/.gitignore
+++ b/.gitignore
@@ -24,10 +24,10 @@ project.xcworkspace
 
 # Android/IntelliJ
 #
-#build/
-#.idea
-#.gradle
-#local.properties
+build/
+.idea
+.gradle
+local.properties
 *.iml
 
 # node.js
