--- a/.gitignore
+++ b/.gitignore
@@ -25,8 +25,8 @@ project.xcworkspace
 # Android/IntelliJ
 #
 build/
-.idea
-.gradle
+*.idea
+*.gradle
 local.properties
 *.iml
 
@@ -51,6 +51,6 @@ buck-out/
 */fastlane/report.xml
 */fastlane/Preview.html
 */fastlane/screenshots
-
+*/package-lock.json
 # Bundle artifact
 *.jsbundle
