--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-native-calendars": "^1.32.0",
     "react-native-iphone-x-helper": "^1.2.0",
     "react-native-modal": "^10.0.0",
+    "react-native-modal-datetime-picker": "^7.5.0",
     "react-native-swiper": "^1.5.14",
     "react-native-vector-icons": "^6.4.2",
     "react-timer-mixin": "^0.13.4",
