--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,6 @@
 {
 
-    "workbench.iconTheme": "material-icon-theme",
+    "workbench.iconTheme": "file-icons",
 
     
     "workbench.colorTheme": "Andromeda Bordered",
