--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "devDependencies": {
     "babel-jest": "23.6.0",
+    "har-validator": "^5.1.3",
     "jest": "23.6.0",
     "metro-react-native-babel-preset": "0.51.0",
     "react-test-renderer": "16.5.0"
