--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react": "16.8.6",
     "react-native": "^0.59.9",
     "react-native-calendars": "^1.32.0",
+    "react-native-firebase": "^5.5.4",
     "react-native-iphone-x-helper": "^1.2.0",
     "react-native-modal": "^10.0.0",
     "react-native-swiper": "^1.5.14",
