--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -22,6 +22,15 @@
       android:appComponentFactory="android.support.v4.app.CoreComponentFactory"
   
     >
+    <activity
+    android:name=".SplashActivity"
+    android:theme="@style/SplashTheme">
+    <intent-filter>
+        <action android:name="android.intent.action.MAIN" />
+
+        <category android:name="android.intent.category.LAUNCHER" />
+    </intent-filter>
+    </activity>
       <activity
         android:name=".MainActivity"
         android:label="@string/app_name"
