--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -19,11 +19,19 @@
       android:allowBackup="false"
       android:theme="@style/AppTheme"
       tools:replace="android:appComponentFactory"
-      android:appComponentFactory="android.support.v4.app.CoreComponentFactory"
-  
-    >
+      android:appComponentFactory="android.support.v4.app.CoreComponentFactory">
+
       <activity
-        android:name=".MainActivity"
+          android:name=".MainActivity"
+          android:theme="@style/AppTheme">
+          <intent-filter>
+              <action android:name="android.intent.action.MAIN" />
+              <category android:name="android.intent.category.LAUNCHER" />
+          </intent-filter>
+      </activity>
+
+      <activity
+        android:name=".MainActivity2"
         android:label="@string/app_name"
         android:screenOrientation="portrait"
         android:configChanges="keyboard|keyboardHidden|orientation|screenSize"
