--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "react-native-swiper": "^1.5.14",
     "react-native-vector-icons": "^6.4.2",
     "react-timer-mixin": "^0.13.4",
-    "realm": "^2.28.0"
+    "realm": "^2.28.0",
+    "rn-splash-screen": "^5.2.0"
   },
   "devDependencies": {
     "babel-jest": "23.6.0",
