--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,7 +3,7 @@
     "workbench.iconTheme": "file-icons",
 
     
-    "workbench.colorTheme": "Andromeda Bordered",
+    "workbench.colorTheme": "Academie Syntax",
     "workbench.editor.labelFormat": "short",
     "java.configuration.updateBuildConfiguration": "automatic"
 
