--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -41,9 +41,8 @@
         android:configChanges="keyboard|keyboardHidden|orientation|screenSize"
         android:launchMode="singleTop"
         android:windowSoftInputMode="stateHidden|adjustPan">
-        
-       
       </activity>
+
      <activity android:name="com.facebook.react.devsupport.DevSettingsActivity" />
 
         <service android:name="io.invertase.firebase.messaging.RNFirebaseMessagingService">
@@ -54,6 +53,7 @@
         <service android:name="io.invertase.firebase.messaging.RNFirebaseBackgroundMessagingService" />
         <receiver android:name="io.invertase.firebase.notifications.RNFirebaseNotificationReceiver"/>
         <receiver android:enabled="true" android:exported="true"  android:name="io.invertase.firebase.notifications.RNFirebaseNotificationsRebootReceiver">
+       
             <intent-filter>
                 <action android:name="android.intent.action.BOOT_COMPLETED"/>
                 <action android:name="android.intent.action.QUICKBOOT_POWERON"/>
@@ -62,5 +62,5 @@
             </intent-filter>
         </receiver>
     </application>
-
+ <meta-data  android:name="com.google.firebase.messaging.default_notification_icon" android:resource="@mipmap/ic_stat" />
 </manifest>
