--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "@babel/runtime": "^7.0.0",
+    "axios": "^0.19.0",
     "create-react-class": "^15.6.3",
     "moment": "^2.24.0",
     "react": "16.8.6",
