--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-native-calendars": "^1.32.0",
     "react-native-elements": "^1.1.0",
     "react-native-firebase": "^5.5.4",
+    "react-native-html-parser": "^0.0.5",
     "react-native-iphone-x-helper": "^1.2.0",
     "react-native-modal": "^10.0.0",
     "react-native-modal-datetime-picker": "^7.5.0",
